# treezy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release_pypi.yml  test.yml
test/: test_bitset.py  test_newick.py  test_newick_tokenizer.py  test_nexus.py  test_tree.py  test_tree_metric.py
treezy/: __init__.py  bitset.py  newick.py  newick_tokenizer.py  nexus.py  node.py  tree.py  tree_metric.py  treeio.py
