[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treezy"
version = "0.0.2"
description = "Simple library for manipulating phylogenetic trees"
authors = [{ name = "Mathieu Fourment", email = "mathieu.fourment@uts.edu.au" }]
keywords=[
    "bioinformatics",
    "phylogenetics",
    "tree",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
homepage = "https://github.com/4ment/treezy"
repository = "https://github.com/4ment/treezy"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "test",
    "treezy"
]

[tool.ruff]
line-length = 88
target-version = "py39"

# Enable formatter + linter
fix = true

# Files to lint
src = ["treezy", "tests"]

[tool.ruff.lint]
# Rule sets to enable
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort (imports)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM",# simplify
    "ARG",# unused arguments
]

ignore = [
    "E203", # whitespace before ':'
    "SIM115", 
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["treezy"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-else-return",
    "too-many-ancestors",
]

[tool.bumpver]
current_version = "0.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version v{old_version} -> v{new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"treezy/__init__.py" = [
    '^__version__ = "{version}"$',
]

